[tool.poetry]
name = "axolotl"
version = "0.1.0"
description = ""
authors = ["Jurriaan Den Toonder <1493561+Fastjur@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
torch = "^1.12.1"
fuzzywuzzy = "^0.18.0"
transformers = "^4.22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
